# Simulacra

./: CLAUDE.md  Cargo.toml
crates/simulacra-engine/: Cargo.toml
crates/simulacra-engine/src/: dye.rs  gpu.rs  lbm.rs  lib.rs  rigidbody.rs
crates/simulacra-engine/src/shaders/: dye_advect.wgsl  lbm_d2q9.wgsl
crates/simulacra-proto/: Cargo.toml
crates/simulacra-proto/src/: levels.rs  main.rs  ship.rs  ui.rs  zone.rs
crates/simulacra-proto/src/shaders/: double.wgsl  render.wgsl
docs/: architecture-decisions.md
